# EchoNest

./: .cache  .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  DOCKER_SECURITY.md  Dockerfile  Makefile  QUEUEING.md  README.md  SECURITY.md  TODO.md  analytics.py  app.py  build-info.yaml  config.example.yaml  config.py  config.yaml  db.py  docker-compose.yaml  history.py  nests.py  requirements.txt  run.py  service-info-echonest.yaml  setup.py  slack.py
docs/: CHANGELOG.md  DEPLOYMENT_REFERENCE.md  GETTING_STARTED.md  NESTS_DECISION_LOG.md  NESTS_PLAN.md  NESTS_TASKS.md  NESTS_TEST_SPEC.md  bender-queue-logic.md  changelog.md  echonest-sync-phase2.md  echonest-sync-plan.md  enhanced-paused-state-plan.md  podcast-support-plan.md  spotify-api-constraints.md
echonest-sync/: .gitignore  CLAUDE.md  README.md  pyproject.toml
echonest-sync/docs/: account-linking.md  apple-developer-id.md  cli.md  features.md  getting-started.md  miniplayer-plan.md  troubleshooting.md  windows-code-signing.md
echonest-sync/resources/: icon.icns
echonest-sync/src/echonest_sync/: app.py  audio.py  cli.py  config.py  ipc.py  link.py  miniplayer.py  player.py  sync.py  tray_mac.py  tray_win.py  updater.py
echonest-sync/tests/: test_ipc.py  test_sync.py
scripts/: ws_connectivity_check.py
supervise/: main.conf  player.conf  redis.conf
templates/: admin_stats.html  base.html  guest_login.html  help.html  join_leave_dm.html  main.html  spotify_connect.html  spotify_prompt.html  stats.html  sync_link.html
test/: passing_test.py  test_api.py  test_auth.py  test_nests.py
(+9 files in other folders)
